# biofilm-image-analysis

./: .gitignore  3D Keyence Image Volumes - Image Processing for Released Cells(1).ipynb  DCT_pipeline.ipynb  Fourier and Wavelet transforming.ipynb  Fourier_and_Wavelet_transforming.ipynb  Keyence - Machine Learning for High Throughput Assay - Short Script.ipynb  cnn_mnist.ipynb  cnns.py  data_loading.py  feature_engineering.ipynb  load_cnn_data.py  model_prediction.py  my_cnn.ipynb  organize.py  pipeline.ipynb  pyproject.toml  requirements.txt  sweep_runner.py  sweep_runner.yml  treatment_cnn.ipynb  utils.py
NaIO4_Examples/: NaIO4_20x_XY01_Z001_CH2.tif  NaIO4_20x_XY01_Z050_CH2.tif  NaIO4_20x_XY01_Z150_CH2.tif  NaIO4_20x_XY01_Z200_CH2.tif  NaIO4_60x_Z001_CH2.tif  NaIO4_60x_Z050_CH2.tif  NaIO4_60x_Z100_CH2.tif  NaIO4_60x_Z150_CH2.tif  NaIO4_60x_Z200_CH2.tif
notebooks/: cnn.ipynb
pipeline_scripts/: feature_extraction.py  image_processing.py  pipeline.py
